--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Турнир: Битва Стратегий</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <!-- ДОБАВЛЕНО: Скрипт Telegram WebApp -->
+    <!-- Скрипт Telegram WebApp -->
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
         /* Custom Chart Container Styles */
@@ -69,6 +69,10 @@
             outline: none;
             border-color: #d97706;
         }
+        /* Плавная прокрутка для всей страницы */
+        html {
+            scroll-behavior: smooth;
+        }
     </style>
 </head>
 <body class="flex flex-col min-h-screen">
@@ -81,6 +85,7 @@
                     <span class="font-bold text-xl tracking-tight text-stone-800">🏆 [ТУРНИР]</span>
                 </div>
                 <div class="hidden md:flex space-x-8">
+                    <!-- ЯКОРЯ В МЕНЮ (Работают через функцию scrollToSection) -->
                     <button onclick="scrollToSection('about')" class="text-stone-600 hover:text-amber-600 px-3 py-2 rounded-md text-sm font-medium transition-colors">О турнире</button>
                     <button onclick="scrollToSection('format')" class="text-stone-600 hover:text-amber-600 px-3 py-2 rounded-md text-sm font-medium transition-colors">Формат</button>
                     <button onclick="scrollToSection('scoring')" class="text-stone-600 hover:text-amber-600 px-3 py-2 rounded-md text-sm font-medium transition-colors">Рейтинг</button>
@@ -104,6 +109,7 @@
                 Битва стратегий и командного духа. Никакого хаоса — только честная борьба в заранее проработанной системе.
             </p>
             <div class="mt-10 flex flex-col sm:flex-row gap-4">
+                <!-- Кнопка ведет вниз к секции "join" -->
                 <button onclick="scrollToSection('join')" class="accent-bg text-white px-8 py-4 rounded-xl text-lg font-bold hover:bg-amber-700 transition-all shadow-lg transform hover:scale-105">
                     Зарегистрировать команду
                 </button>
@@ -210,6 +216,45 @@
         </div>
     </section>
 
+    <!-- Prizes & Join Section (ЯКОРЬ #join) -->
+    <section id="join" class="py-16 bg-stone-900 text-stone-50">
+        <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
+            
+            <div class="bg-gradient-to-br from-amber-600 to-amber-700 rounded-3xl p-8 md:p-12 shadow-2xl">
+                <h2 class="text-3xl font-bold text-white mb-8">Готовы побеждать?</h2>
+                <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4 text-left mb-10">
+                    <div class="bg-white/10 p-4 rounded-lg backdrop-blur-md hover:bg-white/20 transition cursor-pointer">
+                        <span class="block text-2xl font-bold opacity-50 mb-1">01</span>
+                        <h4 class="font-bold">Discord</h4>
+                        <!-- !!! ВСТАВЬТЕ ССЫЛКУ НА ДИСКОРД НИЖЕ (вместо #) !!! -->
+                        <a href="#" target="_blank" class="text-xs opacity-80 underline hover:text-white">Ссылка на сервер</a>
+                    </div>
+                    <div class="bg-white/10 p-4 rounded-lg backdrop-blur-md">
+                        <span class="block text-2xl font-bold opacity-50 mb-1">02</span>
+                        <h4 class="font-bold">Состав</h4>
+                        <p class="text-xs opacity-80">Найдите 2-5 игроков и капитана.</p>
+                    </div>
+                    <div class="bg-white/10 p-4 rounded-lg backdrop-blur-md">
+                        <span class="block text-2xl font-bold opacity-50 mb-1">03</span>
+                        <h4 class="font-bold">Заявка</h4>
+                        <p class="text-xs opacity-80">Капитан заполняет форму за 2 минуты.</p>
+                    </div>
+                    <div class="bg-white/10 p-4 rounded-lg backdrop-blur-md">
+                        <span class="block text-2xl font-bold opacity-50 mb-1">04</span>
+                        <h4 class="font-bold">Старт</h4>
+                        <p class="text-xs opacity-80">Будьте онлайн за 30 мин до начала.</p>
+                    </div>
+                </div>
+
+                <!-- !!! ВСТАВЬТЕ ССЫЛКУ НА ГУГЛ ФОРМУ НИЖЕ В АТРИБУТ HREF !!! -->
+                <!-- Сейчас стоит заглушка #, замените её на вашу ссылку (https://forms.google.com/...) -->
+                <a href="#" target="_blank" class="inline-block w-full md:w-auto bg-white text-amber-700 px-8 py-4 rounded-xl text-lg font-bold hover:bg-stone-100 transition-colors shadow-lg transform hover:scale-105">
+                    Подать заявку на участие
+                </a>
+            </div>
+        </div>
+    </section>
+
     <!-- Footer -->
     <footer class="bg-stone-900 text-stone-400 py-8 border-t border-stone-800 mt-auto">
         <div class="max-w-6xl mx-auto px-4 text-center">
@@ -226,9 +271,6 @@
                 const tg = window.Telegram.WebApp;
                 tg.ready(); // Сообщаем Телеграму, что приложение готово
                 tg.expand(); // Разворачиваем на весь экран
-                
-                // Опционально: красим хедер в цвет темы Телеграм
-                // tg.setHeaderColor(tg.themeParams.bg_color || '#ffffff');
             }
         });
 
