--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
                     <button onclick="scrollToSection('scoring')" class="text-stone-600 hover:text-amber-600 px-3 py-2 rounded-md text-sm font-medium transition-colors">Рейтинг</button>
                     <button onclick="scrollToSection('join')" class="text-stone-600 hover:text-amber-600 px-3 py-2 rounded-md text-sm font-medium transition-colors">Участие</button>
                 </div>
-                <button onclick="scrollToSection('join')" class="accent-bg text-white px-4 py-2 rounded-lg text-sm font-bold hover:bg-amber-700 transition-colors shadow-md">
+                <!-- Кнопка в меню теперь открывает модальное окно -->
+                <button onclick="openRegModal()" class="accent-bg text-white px-4 py-2 rounded-lg text-sm font-bold hover:bg-amber-700 transition-colors shadow-md">
                     Регистрация
                 </button>
             </div>
@@ -109,8 +110,8 @@
                 Битва стратегий и командного духа. Никакого хаоса — только честная борьба в заранее проработанной системе.
             </p>
             <div class="mt-10 flex flex-col sm:flex-row gap-4">
-                <!-- Кнопка ведет вниз к секции "join" -->
-                <button onclick="scrollToSection('join')" class="accent-bg text-white px-8 py-4 rounded-xl text-lg font-bold hover:bg-amber-700 transition-all shadow-lg transform hover:scale-105">
+                <!-- Главная кнопка теперь открывает модальное окно -->
+                <button onclick="openRegModal()" class="accent-bg text-white px-8 py-4 rounded-xl text-lg font-bold hover:bg-amber-700 transition-all shadow-lg transform hover:scale-105">
                     Зарегистрировать команду
                 </button>
                 <button onclick="scrollToSection('about')" class="bg-stone-800 text-stone-200 border border-stone-600 px-8 py-4 rounded-xl text-lg font-medium hover:bg-stone-700 transition-all">
@@ -246,11 +247,11 @@
                     </div>
                 </div>
 
-                <!-- !!! ВСТАВЬТЕ ССЫЛКУ НА ГУГЛ ФОРМУ НИЖЕ В АТРИБУТ HREF !!! -->
-                <!-- Сейчас стоит заглушка #, замените её на вашу ссылку (https://forms.google.com/...) -->
-                <a href="#" target="_blank" class="inline-block w-full md:w-auto bg-white text-amber-700 px-8 py-4 rounded-xl text-lg font-bold hover:bg-stone-100 transition-colors shadow-lg transform hover:scale-105">
+                <!-- POPUP TRIGGER BUTTON -->
+                <!-- Эта кнопка теперь открывает модальное окно с формой -->
+                <button onclick="openRegModal()" class="inline-block w-full md:w-auto bg-white text-amber-700 px-8 py-4 rounded-xl text-lg font-bold hover:bg-stone-100 transition-colors shadow-lg transform hover:scale-105 cursor-pointer">
                     Подать заявку на участие
-                </a>
+                </button>
             </div>
         </div>
     </section>
@@ -262,15 +263,47 @@
         </div>
     </footer>
 
+    <!-- REGISTRATION MODAL (POPUP) -->
+    <div id="regModal" class="fixed inset-0 z-[100] hidden" aria-labelledby="modal-title" role="dialog" aria-modal="true">
+        <!-- Backdrop (Dark overlay) -->
+        <div class="fixed inset-0 bg-stone-900 bg-opacity-90 transition-opacity backdrop-blur-sm" onclick="closeRegModal()"></div>
+
+        <div class="fixed inset-0 z-10 w-screen overflow-y-auto">
+            <div class="flex min-h-full items-center justify-center p-0 md:p-4 text-center">
+                <!-- Modal Panel -->
+                <div class="relative transform overflow-hidden rounded-none md:rounded-2xl bg-white text-left shadow-2xl transition-all w-full h-full md:h-auto md:w-full md:max-w-4xl flex flex-col">
+                    
+                    <!-- Header with Close Button -->
+                    <div class="bg-stone-50 px-4 py-3 border-b border-stone-200 flex justify-between items-center">
+                        <h3 class="text-base font-semibold leading-6 text-stone-900">Регистрация команды</h3>
+                        <button type="button" onclick="closeRegModal()" class="rounded-md bg-stone-100 p-1 text-stone-500 hover:text-stone-700 focus:outline-none hover:bg-stone-200 transition-colors">
+                            <span class="sr-only">Закрыть</span>
+                            <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+                            </svg>
+                        </button>
+                    </div>
+
+                    <!-- Iframe Container -->
+                    <div class="bg-white flex-grow h-[85vh] md:h-[80vh] w-full relative">
+                        <!-- Добавлен параметр embedded=true для чистого вида -->
+                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScp3XxocuP-_QgOytbMIBXwanS5hXYlS_lfEXrFoPgFHR-NTg/viewform?embedded=true" 
+                                class="absolute inset-0 w-full h-full border-none" 
+                                frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Logic Script -->
     <script>
         // --- TELEGRAM MINI APP INIT ---
-        // Инициализация приложения Телеграм
         document.addEventListener('DOMContentLoaded', () => {
             if (window.Telegram && window.Telegram.WebApp) {
                 const tg = window.Telegram.WebApp;
-                tg.ready(); // Сообщаем Телеграму, что приложение готово
-                tg.expand(); // Разворачиваем на весь экран
+                tg.ready(); 
+                tg.expand(); 
             }
         });
 
@@ -280,7 +313,20 @@
             if (element) { element.scrollIntoView({ behavior: 'smooth' }); }
         }
 
-        // --- Format Visualizer Logic (RESTORED) ---
+        // --- Modal Logic (Popup) ---
+        function openRegModal() {
+            document.getElementById('regModal').classList.remove('hidden');
+            // Блокируем прокрутку основного сайта, пока открыто модальное окно
+            document.body.style.overflow = 'hidden';
+        }
+
+        function closeRegModal() {
+            document.getElementById('regModal').classList.add('hidden');
+            // Возвращаем прокрутку
+            document.body.style.overflow = '';
+        }
+
+        // --- Format Visualizer Logic ---
         const teamSelect = document.getElementById('team-count');
         const lobbyGrid = document.getElementById('lobby-grid');
         const formatExplanation = document.getElementById('format-explanation').querySelector('p');
